<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0F2F0"
    tools:context=".MainActivity">

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <com.synnapps.carouselview.CarouselView
        android:id="@+id/carouselView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:autoPlay="true"
        app:fillColor="#00938C"
        app:pageColor="#ffffff"
        app:radius="5dp"
        app:slideInterval="4000"
        app:strokeColor="#ffffff"
        app:strokeWidth="1dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="25dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Hai"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/Where"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="25sp"
            android:textStyle="bold"
            android:typeface="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="horizontal"
            android:background="@drawable/layout_button"
            android:layout_marginTop="270dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center">

            <LinearLayout
            android:layout_width="85dp"
            android:layout_height="100dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnwisata"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/wisata"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Wisata"
                    android:textStyle="bold"
                    android:layout_gravity="center"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btntrans"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/car"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rental"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnhotel"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/hotel"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Hotel"
                    android:layout_gravity="center"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:textColor="@color/white"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="85dp"
                android:layout_height="100dp"
                android:orientation="vertical">
                <Button
                    android:id="@+id/btnrest"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_gravity="center"
                    android:background="@drawable/restoran"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Restaurant"
                    android:textStyle="bold"
                    android:textSize="15sp"
                    android:layout_gravity="center"
                    android:textColor="@color/white"/>
            </LinearLayout>



        </LinearLayout>

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_marginTop="400dp"
        android:layout_marginStart="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Artikel"
                android:layout_marginStart="15dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:textColor="#00938C"/>
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="430dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="#E0F2F0">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_berita"
                android:layout_width="0dp"
                android:layout_height="190dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/adapter_berita"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="620dp">
            <Button
                android:id="@+id/btnsee"
                android:text="See All.."
                android:textSize="15sp"
                android:textColor="@color/black"
                android:layout_height="30dp"
                android:layout_width="70dp"
                android:background="#E0F2F0"
                android:layout_marginStart="320dp"
                android:lineHeight="0dp"
                android:stateListAnimator="@null"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>

